ethereumjs-tx版本处理构造函数bug

--- a/src/views/newaccount.html
+++ b/src/views/newaccount.html
@@ -2,6 +2,8 @@
     <head>
         <title>创建钱包</title>
         <script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://malsup.github.io/jquery.form.js"></script>
+        <script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>
         <script src="/js/wallet.js"></script>
         <link rel="stylesheet" href="/styles/wallet.css">
     </head>
