--- a/src/views/components/nav.html
+++ b/src/views/components/nav.html
@@ -3,6 +3,7 @@
         <ul>
             <li><a href="/newAccount">新建账户</a></li>
             <li><a href="/transaction.html">转账</a></li>
+            <li><a href="/block.html">交易块</a></li>
         </ul>
     </div>
 </div>
